inicio do projeto uai blend

--- a/index.html
+++ b/index.html
@@ -464,11 +464,11 @@
 
                     <!-- UAI BLEND -->
                     <div class="port-item5">
-                        <a target="_blank" href="./projetos/dressler.html">
-                            <img src="./assets/img/projetos/mockup-dressler3.webp" alt="Projeto Dressler">
+                        <a target="_blank" href="./projetos/uai-blend.html">
+                            <img src="./assets/img/projetos/uai-blend/" alt="Projeto Uai Blend">
                             <div class="port-txt">
-                                <h6>Dressler</h6>
-                                <p>Landing Page</p>
+                                <h6>Uai Blend</h6>
+                                <p>Identidade Visual & Naming</p>
                             </div>
                         </a>
                     </div>
