--- a/projetos/uai-blend.html
+++ b/projetos/uai-blend.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;700&family=Poppins:wght@300;700&family=Saira:wght@300;500;700&display=swap" rel="stylesheet">
-  <title>Roccia | Agência Solary</title>
+  <title>Uai Blend | Agência Solary</title>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
       </div>
       <div class="header-right">
         <a href="#formulario">
-          <p class="header-3">formulario</p>
+          <p class="header-3">formulário</p>
         </a>
         <a href="#contato">
           <p class="header-4">contato</p>
@@ -52,15 +52,15 @@
     <!-- CAPA -->
     <article class="proj-capa container">
       <div class="proj-tit">
-        <h2>Grãos verdadeiramente especiais.</h2>
+        <h2>Blend de Minas Gerais c/ Canadá</h2>
         <div class="proj-capa-infos">
           <div class="proj-info">
             <span>Cliente</span>
-            <p>Roccia</p>
+            <p>Uai Blend</p>
           </div>
           <div class="proj-info">
             <span>Ano</span>
-            <p>2022</p>
+            <p>2023</p>
           </div>
           <div class="proj-info">
             <span>O que fizemos</span>
