--- a/projetos/bortoluzzi.html
+++ b/projetos/bortoluzzi.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;700&family=Poppins:wght@300;700&family=Saira:wght@300;500;700&display=swap" rel="stylesheet">
-  <title>Agência Solary</title>
+  <title>Bortoluzzi | Agência Solary</title>
 </head>
 
 <body>
