finalização uai blend

--- a/projetos/uai-blend.html
+++ b/projetos/uai-blend.html
@@ -68,7 +68,7 @@
           </div>
         </div>
       </div>
-      <div class="proj-capa-img"><img src="./../assets/img/projetos/roccia/roccia.webp" alt="Mockup do site"></div>
+      <div class="proj-capa-img"><img src="./../assets/img/projetos/uai blend/Uai Blend Logo.webp" alt="Mockup do site"></div>
     </article>
 
     <!-- SOBRE -->
@@ -77,11 +77,16 @@
         <div class="proj-about-tit">
           <h2>Sobre o Projeto</h2>
           <div class="proj-about-desc">
-            <h3>Amor familiar pela natureza e por cafés.</h3>
-            <p>A família Tegon inicialmente nos procurou para desenvolvermos uma Identidade Visual para sua empresa de cafés especiais, porém ao longo do processo percebemos que seria necessário também desenvolver um naming e estabelecer bases mais sólidas para a marca. Fizemos a criação de uma persona para delimitar melhor qual o público que desejavam atingir, bem como o estabelecimento do arquétipo que mais se encaixava com a marca.
-              <br><br> Gabriela além de ser apaixonada por advogar também ama escrever, então percebemos a necessidade de um blog, onde fosse possível ela estar sempre atualizando e informando seus clientes. O layout do blog foi inspirado no famoso site de textos, Medium, referência em boa experiência ao usuário quando o assunto é leitura em telas.
+            <h3>Uma mistura inusitada, com sabor inacreditável.</h3>
+            <p>A Uai Blend é uma cafeteria localizada em Gurupi-TO. Com cafés de altíssima qualidade e um ambiente acolhedor, seus clientes sabem que este é o lugar ideal para se deliciar com os melhores grãos de café da região.
+              <br><br>
+              Sempre buscando ir além, decidiram investir em um rebranding completo da marca - que antes se chamava Pedra Negra - para trazer uma nova Identidade Visual consistente e ainda mais convidativa.
+              <br><br>A criatividade é o ingrediente especial que faz da Uai Blend muito mais do que uma simples cafeteria. Quando chegou o momento de escolher um nome, decidimos brincar com a pronúncia de "Why" - "Por que" em inglês - e "Uai", um termo típico de Minas Gerais (região natal do fundador da empresa), além de "Blend", que é um termo muito usado no mundo do café e se refere à mistura de diferentes tipos de grãos.
+              <br><br>
+              Mas por que misturar? "Uai Blend?" A resposta está na filosofia da empresa: celebrar a diversidade e incentivar a mistura de culturas de todas as regiões do mundo. Aqui, você encontrará uma mistura única de sabores e aromas que não pode ser encontrada em nenhum outro lugar.
+
             </p>
-            <a target="_blank" class="proj-about-link" href="https://www.behance.net/gallery/157254439/Roccia-Logo-Coffee-Packaging-Visual-Identity">veja mais detalhes do projeto</a>
+            <a target="_blank" class="proj-about-link" href="https://www.behance.net/gallery/164026087/Uai-Blend-Caf">veja mais detalhes do projeto</a>
           </div>
         </div>
       </article>
@@ -90,17 +95,17 @@
     <!-- MOCKUPS -->
     <div class="bg-proj-mockup">
       <article class="proj-mockup container">
-        <img src="./../assets/img/projetos/roccia/Cafés Especiais.webp" alt="Mockup de celulares">
-        <img src="./../assets/img/projetos/roccia/coffee-cup.webp" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/uai blend/Uai Blend Fachada.webp" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/uai blend/Uai Blend Porta Copos.webp" alt="Mockup de celulares">
       </article>
     </div>
 
     <article class="proj-quote container">
-      <h1>Criação de Marca, Naming & Identidade Visual para representar a <span>Roccia</span> cafés especiais.</h1>
+      <h1>Criação de Marca, Naming & Identidade Visual para atualizar a presença da cafeteria <span>Uai Blend</span>.</h1>
     </article>
 
     <article class="proj-mockup2 container">
-      <img src="./../assets/img/projetos/roccia/embalagem-roccia.webp" alt="Embalagem da Roccia - Cafés Especiais">
+      <img src="./../assets/img/projetos/uai blend/Uai Blend Avental.webp" alt="Embalagem da Roccia - Cafés Especiais">
     </article>
 
     <article class="proj-next container">
