tirando os .html

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 
                     <!-- BORTOLUZZI -->
                     <div class="port-item4">
-                        <a target="_blank" href="./projetos/bortoluzzi.html">
+                        <a target="_blank" href="./projetos/bortoluzzi">
                             <img src="./assets/img/bortoluzzi.webp" alt="Projeto Bortoluzzi Advocacia">
                             <div class="port-txt">
                                 <h6>Bortoluzzi Advocacia</h6>
@@ -464,7 +464,7 @@
 
                     <!-- UAI BLEND -->
                     <div class="port-item5">
-                        <a target="_blank" href="./projetos/uai-blend.html">
+                        <a target="_blank" href="./projetos/uai-blend">
                             <img src="./assets/img/projetos/uai-blend/" alt="Projeto Uai Blend">
                             <div class="port-txt">
                                 <h6>Uai Blend</h6>
@@ -475,7 +475,7 @@
 
                     <!-- DRESSLER -->
                     <div class="port-item6">
-                        <a target="_blank" href="./projetos/dressler.html">
+                        <a target="_blank" href="./projetos/dressler">
                             <img src="./assets/img/projetos/mockup-dressler3.webp" alt="Projeto Dressler">
                             <div class="port-txt">
                                 <h6>Dressler</h6>
