--- a/projetos/fluicoffee.html
+++ b/projetos/fluicoffee.html
@@ -24,22 +24,22 @@
   <header class="container">
     <div class="header-bloco">
       <div class="header-left">
-        <a href="./../index.html#metodologia">
+        <a href="./../index#metodologia">
           <p class="header-1"> metodologia</p>
         </a>
-        <a href="./../index.html#diferenciais">
+        <a href="./../index#diferenciais">
           <p class="header-2">diferenciais</p>
         </a>
       </div>
       <div class="header-logo">
-        <a href="./../index.html">
+        <a href="./../index">
           <img src="./../assets/img/icon/log.svg" alt="Ícone Solary"></a>
       </div>
       <div class="header-right">
-        <a href="./../index.html#formulario">
+        <a href="./../index#formulario">
           <p class="header-3">formulario</p>
         </a>
-        <a href="./../index.html#contato">
+        <a href="./../index#contato">
           <p class="header-4">contato</p>
         </a>
       </div>
@@ -99,7 +99,7 @@
     </article>
 
     <article class="proj-next container">
-      <a class="proj-next-link" href="./dressler.html"><span>
+      <a class="proj-next-link" href="./dressler"><span>
           próximo
         </span>
         <span class="proj-next-nome">Dressler</span>
