--- a/projetos/uai-blend.html
+++ b/projetos/uai-blend.html
@@ -33,7 +33,7 @@
         </a>
       </div>
       <div class="header-logo">
-        <a href="./../index.html">
+        <a href="./../index">
           <img src="./../assets/img/icon/log.svg" alt="Ícone Solary"></a>
       </div>
       <div class="header-right">
@@ -109,7 +109,7 @@
     </article>
 
     <article class="proj-next container">
-      <a class="proj-next-link" href="./bortoluzzi.html"><span>
+      <a class="proj-next-link" href="./bortoluzzi"><span>
           próximo
         </span>
         <span class="proj-next-nome">pain 2015</span>
