--- a/404.html
+++ b/404.html
@@ -18,13 +18,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;700&family=Poppins:wght@300;700&family=Saira:wght@300;500;700&display=swap" rel="stylesheet">
 
-<title>Erro 404</title>
+  <title>Erro 404</title>
 </head>
 
 <body>
   <p class="erro-tit">ERRO 404</p>
   <p class="erro-desc">Essa página não existe. Recomendamos você voltar para o início do site</p>
-  <a href="index.html">Voltar ao início</a>
+  <a href="index">Voltar ao início</a>
 </body>
 
 </html>
