--- a/projetos/flavio-maciel.html
+++ b/projetos/flavio-maciel.html
@@ -32,7 +32,7 @@
         </a>
       </div>
       <div class="header-logo">
-        <a href="./../index.html">
+        <a href="./../index">
           <img src="./../assets/img/icon/log.svg" alt="Ícone Solary"></a>
       </div>
       <div class="header-right">
