--- a/projetos/pain.html
+++ b/projetos/pain.html
@@ -32,7 +32,7 @@
         </a>
       </div>
       <div class="header-logo">
-        <a href="./../index.html">
+        <a href="./../index">
           <img src="./../assets/img/icon/log.svg" alt="Ícone Solary"></a>
       </div>
       <div class="header-right">
@@ -101,7 +101,7 @@
     </article>
 
     <article class="proj-next container">
-      <a class="proj-next-link" href="./bortoluzzi.html"><span>
+      <a class="proj-next-link" href="./bortoluzzi"><span>
           próximo
         </span>
         <span class="proj-next-nome"> Bortoluzzi Advocacia</span>
