loading lazy nas img da home

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://agenciasolary.com.br" />
     <!-- Folha de estilos -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -421,7 +422,7 @@
                     <!-- ROCCIA -->
                     <div class="port-item1">
                         <a target="_blank" href="./projetos/roccia">
-                            <img src="./assets/img/projetos/roccia/roccia.webp" alt="Projeto Roccia Cafés Especiais">
+                            <img loading="lazy" src="./assets/img/projetos/roccia/roccia.webp" alt="Projeto Roccia Cafés Especiais">
                             <div class="port-txt">
                                 <h6>Roccia Cafés Especiais</h6>
                                 <p>Identidade Visual & Packing</p>
@@ -432,7 +433,7 @@
                     <!-- PAIN -->
                     <div class="port-item2">
                         <a target="_blank" href="./projetos/pain.html">
-                            <img src="./assets/img/paiN.webp" alt="Projeto paiN Gaming">
+                            <img loading="lazy" src="./assets/img/paiN.webp" alt="Projeto paiN Gaming">
                             <div class="port-txt">
                                 <h6>paiN 2015</h6>
                                 <p>Website</p>
@@ -443,7 +444,7 @@
                     <!-- FLAVIO MACIEL -->
                     <div class="port-item3">
                         <a target="_blank" href="./projetos/flavio-maciel.html">
-                            <img src="./assets/img/flavioadv.webp" alt="Projeto Flavio Maciel">
+                            <img loading="lazy" src="./assets/img/flavioadv.webp" alt="Projeto Flavio Maciel">
                             <div class="port-txt">
                                 <h6>Escritório Flavio Maciel</h6>
                                 <p>Website & Landing Page</p>
@@ -453,8 +454,8 @@
 
                     <!-- BORTOLUZZI -->
                     <div class="port-item4">
-                        <a target="_blank" href="./projetos/bortoluzzi">
-                            <img src="./assets/img/bortoluzzi.webp" alt="Projeto Bortoluzzi Advocacia">
+                        <a target="_blank" href="./projetos/bortoluzzi.html">
+                            <img loading="lazy" src="./assets/img/bortoluzzi.webp" alt="Projeto Bortoluzzi Advocacia">
                             <div class="port-txt">
                                 <h6>Bortoluzzi Advocacia</h6>
                                 <p>Website & Blog</p>
@@ -464,8 +465,8 @@
 
                     <!-- UAI BLEND -->
                     <div class="port-item5">
-                        <a target="_blank" href="./projetos/uai-blend">
-                            <img src="./assets/img/projetos/uai-blend/" alt="Projeto Uai Blend">
+                        <a target="_blank" href="./projetos/uai-blend.html">
+                            <img loading="lazy" src="./assets/img/projetos/uai blend/Uai Blend Logo.webp" alt="Projeto Uai Blend">
                             <div class="port-txt">
                                 <h6>Uai Blend</h6>
                                 <p>Identidade Visual & Naming</p>
@@ -475,8 +476,8 @@
 
                     <!-- DRESSLER -->
                     <div class="port-item6">
-                        <a target="_blank" href="./projetos/dressler">
-                            <img src="./assets/img/projetos/mockup-dressler3.webp" alt="Projeto Dressler">
+                        <a target="_blank" href="./projetos/dressler.html">
+                            <img loading="lazy" src="./assets/img/projetos/mockup-dressler3.webp" alt="Projeto Dressler">
                             <div class="port-txt">
                                 <h6>Dressler</h6>
                                 <p>Landing Page</p>
