correção link quebrado dressler

--- a/projetos/dressler.html
+++ b/projetos/dressler.html
@@ -78,7 +78,7 @@
               <br><br>
               Para melhor oferecer esses serviços, a Dressler procurou a Solary para desenvolver seções no seu site que oferecerem esses produtos. Desenvolvemos então 3 novas seções, sempre norteados por boas práticas de UX visando uma experiência agradável ao usuário.
             </p>
-            <a class="proj-about-link" href="https://dressler.com.br/folha-de-pagamento">veja o site completo aqui</a>
+            <a class="proj-about-link" href="https://dressler.com.br">veja o site completo aqui</a>
           </div>
         </div>
       </article>
