correção img quebrada roccia

--- a/projetos/roccia.html
+++ b/projetos/roccia.html
@@ -90,7 +90,7 @@
     <!-- MOCKUPS -->
     <div class="bg-proj-mockup">
       <article class="proj-mockup container">
-        <img src="./../assets/img/projetos/roccia/Cafés Especiais.webp" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/roccia/cafes-especiais.webp" alt="Mockup de celulares">
         <img src="./../assets/img/projetos/roccia/coffee-cup.webp" alt="Mockup de celulares">
       </article>
     </div>
