portfólio atualizado: kleberson

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 <div class="diferenciais__txt">
                     <span>Codificação</span>
                     <h5>Códigos Originais</h5>
-                    <p>Desde o processo de desenho do site, criamos algo que atenda perfeitamente a necessidade do cliente, então não utilizamos nenhum modelo pronto de site. Além de não utilizar nenhum builder como Wordpress/Wix entre outros.</p>
+                    <p>Desde o processo de desenho do site, criamos algo que atenda perfeitamente a necessidade do cliente, então não utilizamos nenhum modelo pronto de site. Além de não utilizar nenhum builder como Elementor/Wix entre outros.</p>
                 </div>
             </div>
         </section>
@@ -429,13 +429,13 @@
                         </a>
                     </div>
 
-                    <!-- PAIN -->
+                    <!-- KLEBERSON -->
                     <div class="port-item2">
-                        <a target="_blank" href="./projetos/pain.html">
-                            <img src="./assets/img/paiN.webp" alt="Projeto paiN Gaming">
+                        <a target="_blank" href="./projetos/kleberson-dos-santos">
+                            <img src="./assets/img/projetos/kleberson/logo-capa.webp" alt="Projeto Kleberson dos Santos">
                             <div class="port-txt">
-                                <h6>paiN 2015</h6>
-                                <p>Website</p>
+                                <h6>Kleberson dos Santos</h6>
+                                <p>Website & Identidade Visual</p>
                             </div>
                         </a>
                     </div>
@@ -465,7 +465,7 @@
                     <!-- UAI BLEND -->
                     <div class="port-item5">
                         <a target="_blank" href="./projetos/uai-blend">
-                            <img src="./assets/img/projetos/uai-blend/" alt="Projeto Uai Blend">
+                            <img src="./assets/img/projetos/uai blend/uai-blend-logo.webp" alt="Projeto Uai Blend">
                             <div class="port-txt">
                                 <h6>Uai Blend</h6>
                                 <p>Identidade Visual & Naming</p>
@@ -473,16 +473,17 @@
                         </a>
                     </div>
 
-                    <!-- DRESSLER -->
+                    <!-- PAIN -->
                     <div class="port-item6">
-                        <a target="_blank" href="./projetos/dressler">
-                            <img src="./assets/img/projetos/mockup-dressler3.webp" alt="Projeto Dressler">
+                        <a target="_blank" href="./projetos/pain.html">
+                            <img src="./assets/img/paiN.webp" alt="Projeto paiN Gaming">
                             <div class="port-txt">
-                                <h6>Dressler</h6>
-                                <p>Landing Page</p>
+                                <h6>paiN 2015</h6>
+                                <p>Website</p>
                             </div>
                         </a>
                     </div>
+
                 </div>
             </div>
         </section>
