--- a/projetos/kleberson-dos-santos.html
+++ b/projetos/kleberson-dos-santos.html
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;700&family=Poppins:wght@300;700&family=Saira:wght@300;500;700&display=swap" rel="stylesheet">
-  <title>Uai Blend | Agência Solary</title>
+  <title>Kleberson dos Santos | Agência Solary</title>
 </head>
 
 <body>
@@ -52,11 +52,11 @@
     <!-- CAPA -->
     <article class="proj-capa container">
       <div class="proj-tit">
-        <h2>Blend de Minas Gerais c/ Canadá</h2>
+        <h2>Confiança quando você mais precisa</h2>
         <div class="proj-capa-infos">
           <div class="proj-info">
             <span>Cliente</span>
-            <p>Uai Blend</p>
+            <p>Kleberson dos Santos</p>
           </div>
           <div class="proj-info">
             <span>Ano</span>
@@ -64,11 +64,11 @@
           </div>
           <div class="proj-info">
             <span>O que fizemos</span>
-            <p>Identidade Visual, Marca & Packing</p>
+            <p>Website & Identidade Visual</p>
           </div>
         </div>
       </div>
-      <div class="proj-capa-img"><img src="./../assets/img/projetos/uai blend/Uai Blend Logo.webp" alt="Mockup do site"></div>
+      <div class="proj-capa-img"><img src="./../assets/img/projetos/kleberson/logo-animacao.gif" alt="Mockup do site"></div>
     </article>
 
     <!-- SOBRE -->
@@ -77,18 +77,15 @@
         <div class="proj-about-tit">
           <h2>Sobre o Projeto</h2>
           <div class="proj-about-desc">
-            <h3>Uma mistura inusitada, com sabor inacreditável.</h3>
+            <h3>15 anos ajudando de verdade</h3>
             <p>
               No processo de construção da Identidade Visual, fizemos uma parceria com o <a class="link-interno" target="_blank" href="https://kirchstudio.com/">Kirch Studio</a>.
               <br><br>
-              A Uai Blend é uma cafeteria localizada em Gurupi-TO. Com cafés de altíssima qualidade e um ambiente acolhedor, seus clientes sabem que este é o lugar ideal para se deliciar com os melhores grãos de café da região.
+              O principal objetivo deste projeto foi modernizar a marca e destacar a presença do escritório, principalmente no mundo digital, considerando que Kleberson dos Santos Advocacia é especializado em casos previdenciários e tem seu escritório em Palhoça - SC há mais de 15 anos.
               <br><br>
-              Sempre buscando ir além, decidiram investir em um rebranding completo da marca - que antes se chamava Pedra Negra - para trazer uma nova Identidade Visual consistente e ainda mais convidativa.
-              <br><br>A criatividade é o ingrediente especial que faz da Uai Blend muito mais do que uma simples cafeteria. Quando chegou o momento de escolher um nome, decidimos brincar com a pronúncia de "Why" - "Por que" em inglês - e "Uai", um termo típico de Minas Gerais (região natal do fundador da empresa), além de "Blend", que é um termo muito usado no mundo do café e se refere à mistura de diferentes tipos de grãos.
-              <br><br>
-              Mas por que misturar? "Uai Blend?" A resposta está na filosofia da empresa: celebrar a diversidade e incentivar a mistura de culturas de todas as regiões do mundo. Aqui, você encontrará uma mistura única de sabores e aromas que não pode ser encontrada em nenhum outro lugar.
+              Foi uma experiência muito gratificante trabalhar em um projeto tão importante para o escritório Kleberson dos Santos Advocacia. Estamos animados com o resultado final e confiantes de que a nova identidade visual irá ajudá-los a se destacar no mercado e atrair ainda mais clientes.
             </p>
-            <a target="_blank" class="proj-about-link" href="https://www.behance.net/gallery/164026087/Uai-Blend-Caf">veja mais detalhes do projeto</a>
+            <a target="_blank" class="proj-about-link" href="https://kdsadv.com.br/">veja mais detalhes do projeto</a>
           </div>
         </div>
       </article>
@@ -97,24 +94,24 @@
     <!-- MOCKUPS -->
     <div class="bg-proj-mockup">
       <article class="proj-mockup container">
-        <img src="./../assets/img/projetos/uai blend/Uai Blend Fachada.webp" alt="Mockup de celulares">
-        <img src="./../assets/img/projetos/uai blend/Uai Blend Porta Copos.webp" alt="Mockup de celulares">
+        <img src="./../assets/img/projetos/kleberson/parede.webp" alt="Mockup da parede do escritório">
+        <img src="./../assets/img/projetos/kleberson/cartao de visita.webp" alt="Mockup de celulares">
       </article>
     </div>
 
     <article class="proj-quote container">
-      <h1>Criação de Marca, Naming & Identidade Visual para atualizar a presença da cafeteria <span>Uai Blend</span>.</h1>
+      <h1>Desenvolvimento do site, landing page & Identidade Visual para <span>modernizar</span> a presença do escritório digitalmente.</h1>
     </article>
 
     <article class="proj-mockup2 container">
-      <img src="./../assets/img/projetos/uai blend/Uai Blend Avental.webp" alt="Embalagem da Roccia - Cafés Especiais">
+      <img src="./../assets/img/projetos/kleberson/fachada.webp" alt="Fachada do escritório - Kleberson dos Santos">
     </article>
 
     <article class="proj-next container">
       <a class="proj-next-link" href="./bortoluzzi"><span>
           próximo
         </span>
-        <span class="proj-next-nome">pain 2015</span>
+        <span class="proj-next-nome">bortoluzzi</span>
       </a>
     </article>
   </main>
