fix: broken link header

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <a target="_blank" href="https://forms.gle/vWMG9GMsxZWfwRJ88">
                     <p class="header-3">formulário</p>
                 </a>
-                <a href="#contato">
+                <a href="https://wa.me/5553999902079">
                     <p class="header-4">contato</p>
                 </a>
             </div>
