FEAT: seção calculo

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <!-- Folha de estilos -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <!-- Pintrest Tag -->
-    <meta name="p:domain_verify" content="e724a85bef254ab382b5bfb7efd84e3e" />
-
     <!-- Google tag (gtag.js) -->
     <script defer src="https://www.googletagmanager.com/gtag/js?id=G-QP9PL9SE5C"></script>
     <script>
@@ -42,6 +39,7 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <header class="container">
         <div class="header-bloco">
             <div class="header-left">
