FEAT styles metricas

--- a/metricas-parciais.html
+++ b/metricas-parciais.html
@@ -108,7 +108,7 @@
         var mqlsPartial = mqls + " | " + ratio + " - " + week + "/" + totalWeeks + " | Até o momento: " + mqls;
 
         // Gerar o texto do relatório
-        var reportText = "Boa tarde galera! <br><br> Encerramos a [PRIMEIRA] semana do mês de [MÊS]. Levando isso em conta, o resultado parcial deve ser de " + ratio + ".\n\n";
+        var reportText = "Boa tarde galera! Encerramos a [PRIMEIRA] semana do mês de [MÊS]. Levando isso em conta, o resultado parcial deve ser de " + ratio + ".\n\n";
         reportText += "Resultados até o momento:\n\n";
         reportText += "Oportunidades - " + opportunitiesPartial + "\n";
         reportText += "Trials - " + trialsPartial + "\n";
