REFACTOR: id in pages html

--- a/404.html
+++ b/404.html
@@ -22,9 +22,11 @@
 </head>
 
 <body>
-  <p class="erro-tit">ERRO 404</p>
-  <p class="erro-desc">Essa página não existe. Recomendamos você voltar para o início do site</p>
-  <a href="index">Voltar ao início</a>
+  <main id="page-404">
+    <p class="erro-tit">ERRO 404</p>
+    <p class="erro-desc">Essa página não existe. Recomendamos você voltar para o início do site</p>
+    <a href="index">Voltar ao início</a>
+  </main>
 </body>
 
 </html>
