--- a/calculo.html
+++ b/calculo.html
@@ -60,7 +60,7 @@
       </div>
     </div>
   </header>
-  <main>
+  <main id="page-calculo">
     <div class="container calculo">
       <h1>Calculadora de Pontuação | ADVBOX</h1>
       <label for="pontos">Digite a quantidade de pontos feitos nesse mês:</label>
